# FEMgine

./: CMakeLists.txt  README.md
doc/: TEMPLATE.cpp  TEMPLATE.h
doc/latex/: main.tex  refs.bib
doc/numbering_conventions/2-dimensional/: Quadrilateral.xopp  Triangle.xopp
doc/numbering_conventions/3-dimensional/: Hexahedron.xopp  Tetrahedron.xopp
include/: tools.h
src/elements/: Element.cpp  Element.h  Lagrange.cpp  Lagrange.h  Nedelec.cpp  Nedelec.h
src/geometry/: Line.cpp  Line.h  Mesh.cpp  Mesh.h  Point.cpp  Point.h  Shape.cpp  Shape.h  Surface.cpp  Surface.h  Volume.cpp  Volume.h
src/solvers/: GaussSeidel.h
tutorials/gtest/: gtest.cpp
tutorials/test/: test.cpp
utilities/: FEMgine.h
utilities/interface/: GidReader.cpp  GidReader.h  MeshReader.cpp  MeshReader.h  MeshWriter.cpp  MeshWriter.h
utilities/items/: DOF.cpp  DOF.h  Entity.cpp  Entity.h  EntityList.cpp  EntityList.h
